tests/constant-captured-variables.stderr
error: 
  ┌─ test:5:13
  │
5 │   f : () -> n
  │             ^ constant cannot refer to outside variable `n`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/constant-captured-variables

